# ProteinMPNN

./: setup.cfg
ProteinMPNN/: ca_model_weights  protein_mpnn_run.py  vanilla_model_weights
